force-app/main/default/objects/Opportunity_Line__c/Opportunity_Line__c.object-meta.xml
<CustomObject>
    <label>Opportunity Line</label>
    <nameField>
        <label>Opportunity Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>