force-app/main/default/objects/Opportunity_Line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Opportunity_Line__r.Account.Id</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>