force-app/main/default/objects/Opportunity_Line__c/fields/Battery_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Battery_Capacity__c</fullName>
    <label>Battery Capacity</label>
    <type>TextArea</type>
</CustomField>