force-app/main/default/objects/Opportunity_Line__c/fields/Battery_Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>Battery_Warranty_Period__c</fullName>
    <label>Battery Warranty Period</label>
    <type>TextArea</type>
</CustomField>