force-app/main/default/objects/Opportunity_Line__c/fields/Book_with_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Book_with_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book with Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>