force-app/main/default/objects/Opportunity_Line__c/fields/Build_Year__c.field-meta.xml
<CustomField>
    <fullName>Build_Year__c</fullName>
    <formula>year( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>