force-app/main/default/objects/Opportunity_Line__c/fields/Charging_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Charging_Requirements__c</fullName>
    <label>Charging Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plug In (CCS Type 1)</fullName>
            </value>
            <value>
                <fullName>Plug In (CCS Type 2)</fullName>
            </value>
            <value>
                <fullName>WAVE Inductive</fullName>
            </value>
            <value>
                <fullName>Momentum Dynamics Inductive</fullName>
            </value>
            <value>
                <fullName>Overhead Conductive</fullName>
                <label>Overhead Conductive - Pantograph</label>
            </value>
            <value>
                <fullName>Overhead Conductive - Blade</fullName>
            </value>
            <value>
                <fullName>Overhead Conductive - Inverted Pantograph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>