force-app/main/default/objects/Opportunity_Line__c/fields/Contract_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Contract_Delivery__c</fullName>
    <formula>Reference_Contract__r.Option_Delivery_Requirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Delivery</label>
    <type>Text</type>
</CustomField>