force-app/main/default/objects/Opportunity_Line__c/fields/Contract_Option__c.field-meta.xml
<CustomField>
    <fullName>Contract_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Option</label>
    <referenceTo>Contract_Option__c</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>