force-app/main/default/objects/Opportunity_Line__c/fields/Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked__c</fullName>
    <description>Date bus booked into backlog</description>
    <inlineHelpText>When this field is completed, the bus is added to the production backlog and the Sales Order is Generated.</inlineHelpText>
    <label>Date Booked</label>
    <type>Date</type>
</CustomField>