force-app/main/default/objects/Opportunity_Line__c/fields/Delivery_Commitment_Firm__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Commitment_Firm__c</fullName>
    <formula>if( isblank(PO_Date__c ),null, 
if( 
ISPICKVAL( Quoted_Delivery_Picklist__c ,&quot;X Months After Receipt of Order&quot;), PO_Date__c + (365* (Quoted_Delivery_Variable__c /12)), 

If(ISPICKVAL( Quoted_Delivery_Picklist__c ,&quot;X Weeks After Receipt of Order&quot;), PO_Date__c + (7* Quoted_Delivery_Variable__c ), 


If(ISPICKVAL( Quoted_Delivery_Picklist__c ,&quot;X Days After Receipt of Order&quot;), PO_Date__c + Quoted_Delivery_Variable__c 

, 
If(ISPICKVAL( Quoted_Delivery_Picklist__c ,&quot;365 Days + End of Calendar Quarter&quot;), 

date( YEAR(PO_Date__c)+1 , 

If(or(month(PO_Date__c)=1, month(PO_Date__c)=2, month(PO_Date__c)=3),3, if(or(month(PO_Date__c)=4,month(PO_Date__c)=5,month(PO_Date__c)=6),6, 
if(or(month(PO_Date__c)=7,month(PO_Date__c)=8,month(PO_Date__c)=9),9,12))), 


if(or(month(PO_Date__c)=4,month(PO_Date__c)=5,month(PO_Date__c)=6,month(PO_Date__c)=7,month(PO_Date__c)=8,month(PO_Date__c)=9),30,31)), 


Null 

)))))</formula>
    <label>Delivery Commitment (Firm)</label>
    <type>Date</type>
</CustomField>