force-app/main/default/objects/Opportunity_Line__c/fields/Delivery_Miles__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Miles__c</fullName>
    <formula>Opportunity_Line__r.Account.Standard_Delivery_Miles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>