force-app/main/default/objects/Opportunity_Line__c/fields/Earliest_Delivery_Possible__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Delivery_Possible__c</fullName>
    <label>Earliest Delivery Possible</label>
    <type>Date</type>
</CustomField>