force-app/main/default/objects/Opportunity_Line__c/fields/Electric_Inflation__c.field-meta.xml
<CustomField>
    <fullName>Electric_Inflation__c</fullName>
    <label>Electric Inflation</label>
    <summarizedField>Opportunity_Inflation__c.Electric_inflation__c</summarizedField>
    <summaryForeignKey>Opportunity_Inflation__c.Opportunity_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>