force-app/main/default/objects/Opportunity_Line__c/fields/Finance_Std_Materials__c.field-meta.xml
<CustomField>
    <fullName>Finance_Std_Materials__c</fullName>
    <formula>Margin_Ref_SO_Standard_Materials__c * (1 +  Material_Inflation_Adj__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Std Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>