force-app/main/default/objects/Opportunity_Line__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fleet</label>
    <referenceTo>Fleet__c</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>