force-app/main/default/objects/Opportunity_Line__c/fields/ForecastGoal__c.field-meta.xml
<CustomField>
    <fullName>ForecastGoal__c</fullName>
    <description>Quantity of buses to meet Goals</description>
    <formula>if(or((Opportunity_Line__r.IsWon &amp;&amp; Opportunity_Line__r.IsClosed), not(Opportunity_Line__r.IsClosed), not(isblank(Date_Booked__c)) ), Quantity__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ForecastGoal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>