force-app/main/default/objects/Opportunity_Line__c/fields/ForecastGoalPercent__c.field-meta.xml
<CustomField>
    <fullName>ForecastGoalPercent__c</fullName>
    <formula>if(or((Opportunity_Line__r.IsWon &amp;&amp; Opportunity_Line__r.IsClosed), not(Opportunity_Line__r.IsClosed), not(isblank(Date_Booked__c)) ),  Quantity__c / Opportunity_Line__r.Owner.Goal__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ForecastGoalPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>