force-app/main/default/objects/Opportunity_Line__c/fields/Gross_Margin_pct__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_pct__c</fullName>
    <formula>Gross_Margin__c /  Current_Net_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>