force-app/main/default/objects/Opportunity_Line__c/fields/Hybrid_Inflation__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Inflation__c</fullName>
    <label>Hybrid Inflation</label>
    <summarizedField>Opportunity_Inflation__c.Hybrid_Inflation__c</summarizedField>
    <summaryForeignKey>Opportunity_Inflation__c.Opportunity_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>