force-app/main/default/objects/Opportunity_Line__c/fields/Lo_No_Grant__c.field-meta.xml
<CustomField>
    <fullName>Lo_No_Grant__c</fullName>
    <label>Lo No Grant</label>
    <type>TextArea</type>
</CustomField>