force-app/main/default/objects/Opportunity_Line__c/fields/Margin_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Margin_Assumption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Margin Assumption</label>
    <referenceTo>Margin_Assumption__c</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>