force-app/main/default/objects/Opportunity_Line__c/fields/Margin_Ref_SO_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Margin_Ref_SO_Revenue__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Quoted_Price__c - Margin_Reference_Sales_Order__r.Current_Tax__c - Margin_Reference_Sales_Order__r.Spare_Tooling_Budget__c - Margin_Reference_Sales_Order__r.Training_Revenue_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Ref SO Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>