force-app/main/default/objects/Opportunity_Line__c/fields/Margin_Reference_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Margin_Reference_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Margin Reference Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Opportunity Lines (Margin Reference Sales Order)</relationshipLabel>
    <relationshipName>Opportunity_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>