force-app/main/default/objects/Opportunity_Line__c/fields/Material_Inflation_Adj__c.field-meta.xml
<CustomField>
    <fullName>Material_Inflation_Adj__c</fullName>
    <formula>IF(INCLUDES(Mode__c, &apos;Diesel&apos;), Diesel_Inflation__c , 
   IF(INCLUDES(Mode__c, &apos;CNG&apos;), CNG_Inflation__c  ,
      IF(INCLUDES(Mode__c, &apos;Electric&apos;), Electric_Inflation__c  , Hybrid_Inflation__c  
         )
      ) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Inflation Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>