force-app/main/default/objects/Opportunity_Line__c/fields/Materials_adj_for_Options_w_PPI__c.field-meta.xml
<CustomField>
    <fullName>Materials_adj_for_Options_w_PPI__c</fullName>
    <formula>Options_Value__c * (1 -  Margin_assumption_on_Options__c ) * (1 +  Material_Inflation_Adj__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materials adj for Options w/PPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>