force-app/main/default/objects/Opportunity_Line__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>Allison Hybrid</fullName>
            </value>
            <value>
                <fullName>BAE Hybrid</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Fuel Cell</fullName>
            </value>
            <value>
                <fullName>Trolley (Overhead)</fullName>
            </value>
            <value>
                <fullName>Glider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>