force-app/main/default/objects/Opportunity_Line__c/fields/Operated_By__c.field-meta.xml
<CustomField>
    <fullName>Operated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operated By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>