force-app/main/default/objects/Opportunity_Line__c/fields/Options_Value__c.field-meta.xml
<CustomField>
    <fullName>Options_Value__c</fullName>
    <formula>Current_Net_Revenue__c - Margin_Reference_Sales_Order__r.Revenue__c -  Purchase_Price_Index_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Options Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>