force-app/main/default/objects/Opportunity_Line__c/fields/Outside_Processes__c.field-meta.xml
<CustomField>
    <fullName>Outside_Processes__c</fullName>
    <formula>Margin_Assumption__r.Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside Processes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>