force-app/main/default/objects/Opportunity_Line__c/fields/PPI_Difference__c.field-meta.xml
<CustomField>
    <fullName>PPI_Difference__c</fullName>
    <formula>Purchase_Price_Index__c -  Margin_Reference_Sales_Order__r.Finance_PPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPI Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>