force-app/main/default/objects/Opportunity_Line__c/fields/Pricing_Analyst_Cust_Quote_Process_Time__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analyst_Cust_Quote_Process_Time__c</fullName>
    <label>Pricing Analyst Cust Quote Process Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>