force-app/main/default/objects/Opportunity_Line__c/fields/Project_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Manager__c</fullName>
    <formula>Opportunity_Line__r.Account.Project_Sales_Manager__r.FirstName  + &apos; &apos; +   Opportunity_Line__r.Account.Project_Sales_Manager__r.LastName</formula>
    <label>Project Sales Manager</label>
    <type>Text</type>
</CustomField>