force-app/main/default/objects/Opportunity_Line__c/fields/PSM_Price_Variance_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>PSM_Price_Variance_Processing_Time__c</fullName>
    <label>PSM Price Variance Processing Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>