force-app/main/default/objects/Opportunity_Line__c/fields/Purchase_Price_Index__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Index__c</fullName>
    <label>Purchase Price Index Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>