force-app/main/default/objects/Opportunity_Line__c/fields/Purchase_Price_Index_Value__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Index_Value__c</fullName>
    <formula>PPI_Difference__c *  Margin_Ref_SO_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price Index Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>