force-app/main/default/objects/Opportunity_Line__c/fields/Purchased_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Warranty__c</fullName>
    <label>Purchased Warranty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>