force-app/main/default/objects/Opportunity_Line__c/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <description>Date of most recent quote</description>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>