force-app/main/default/objects/Opportunity_Line__c/fields/Quote_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration__c</fullName>
    <formula>Quote_Date__c + Quote_Validity_Period_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Expiration</label>
    <type>Date</type>
</CustomField>