force-app/main/default/objects/Opportunity_Line__c/fields/Quote_Validity_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Period_Days__c</fullName>
    <label>Quote Validity Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>