force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Delivery_1__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Delivery_1__c</fullName>
    <formula>if( ispickval( Quoted_Delivery_Picklist__c , 
&quot;X Months After Receipt of Order&quot;), 
text( Quoted_Delivery_Variable__c ) +&quot; Months After Receipt of Order&quot;, 

if(ispickval(Quoted_Delivery_Picklist__c , 
&quot;X Weeks After Receipt of Order&quot;), 
text(Quoted_Delivery_Variable__c )+&quot; Weeks After Receipt of Order&quot;, 

if(ispickval(Quoted_Delivery_Picklist__c , 
&quot;X Days After Receipt of Order&quot;), 
text(Quoted_Delivery_Variable__c ) +&quot; Days After Receipt of Order&quot;, 

text( Quoted_Delivery_Picklist__c  ))))</formula>
    <label>Quoted Delivery -</label>
    <type>Text</type>
</CustomField>