force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Delivery__c</fullName>
    <description>Enter the delivery quoted</description>
    <label>Quoted Delivery</label>
    <type>TextArea</type>
</CustomField>