force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Delivery_Details__c</fullName>
    <label>Quoted Delivery (Details)</label>
    <type>TextArea</type>
</CustomField>