force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Delivery_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Delivery_Picklist__c</fullName>
    <label>Quoted Delivery (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Quotes</valueSetName>
    </valueSet>
</CustomField>