force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Delivery_Variable__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Delivery_Variable__c</fullName>
    <label>Quoted Delivery (Variable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>