force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>Price per most recent quote</description>
    <label>Quoted Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>